<resources>
    <string name="app_name">Bingee</string>
    <string name="first_slide_title">Essential baking ingredients</string>
    <string name="second_slide_title">Infuse personality with modern furniture</string>
    <string name="third_slide_title">Fast Delivery and Freeship</string>
    <string name="first_slide_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt"</string>
    <string name="second_slide_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt"</string>
    <string name="third_slide_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt"</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bin_app_name">Bingee</string>
    <string name="bin_hint_phonenumber">Phone Number</string>
    <string name="bin_hint_password">Password</string>
    <string name="bin_button_go">Go</string>
    <string name="bin_button_signup">Sign Up</string>
    <string name="bin_hint_fullname">Full Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bin_button_update">Update</string>
    <string name="bin_hint_address">Address</string>
    <string name="bin_hint_email">Email</string>
    <string name="bin_hint_male">Male</string>
    <string name="bin_hint_female">Female</string>
    <string name="bin_hint_dob">Date of birth</string>
    <string name="loading">Loading...</string>
    <string name="bin_category_title">Title</string>
    <string name="bin_category_description">Secondary text</string>
    <string name="bin_product_title">Title</string>
    <string name="bin_product_description">Description text</string>
    <string name="bin_button_checkout">Checkout</string>
    <string name="bin_cart">Cart</string>
    <string name="bin_cart_total">Total:</string>
    <string name="bin_cart_totalprice">0 $</string>
    <string name="bin_product_price">Just 100 $</string>
    <string name="action_add_to_cart">Add To Cart</string>
    <string name="action_buy_now">Buy Now</string>
    <string name="bin_hint_comment">Enter your comment here</string>
    <string name="action_submit">Submit</string>
    <string name="search_title">Search</string>
    <string name="cart_title">Cart</string>
    <string name="action_delete_item">Delete</string>
    <string name="bin_item_price">100 $</string>
    <string name="action_clean_cart">Clean Cart</string>
    <string name="bin_checkout_title">Checkout</string>
    <string name="bin_btn_Finish">Finish</string>
    <string name="bin_btn_place_order">Place Order</string>
    <string name="method_delivery_title">Method Of Delivery</string>
    <string name="bin_hint_cod_shipping">COD shipping</string>
    <string name="pay_method_title">Payment Method</string>
    <string name="bin_hint_cod">Cash on Delivery (COD)</string>
    <string name="bin_hint_credit_card">Credit Card</string>
    <string name="shipping_to_title">Shipping to</string>
    <string name="your_order_title">Your order</string>
    <string name="bin_request_order_date">18/07/2020 18:05:30</string>
    <string name="bin_request_title">MCWnh0LqYIRE13XFc0v</string>
    <string name="bin_request_ordinal_numbers">1.</string>
    <string name="bin_request_order_list_title">History Order</string>
    <string name="status_title">Status</string>
    <string name="bin_hint_place">Place</string>
    <string name="bin_hint_shipping">Shipping</string>
    <string name="bin_hint_Finish">Finish</string>
    <string name="cart_empty">Cart Empty</string>
</resources>