<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ViewDetailRequestOrderFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_app_bar" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/your_order_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/your_order_title"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/black" />

                    <androidx.core.widget.NestedScrollView
                        android:id="@+id/nestedscroll_view_cartlist"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:background="@color/white"
                        android:paddingStart="@dimen/bin_category_grid_spacing"
                        android:paddingEnd="@dimen/bin_category_grid_spacing"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view_cart_request_order"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"/>
                    </androidx.core.widget.NestedScrollView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_view_checkout"
                        style="@style/CardView.Light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:elevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:id="@+id/layout_total_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <com.google.android.material.textview.MaterialTextView
                                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/bin_cart_total"
                                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/cart_total_price"
                                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:inputType="numberDecimal"
                                    android:text="@string/bin_cart_totalprice"
                                    android:layout_alignParentRight="true"
                                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />
                            </RelativeLayout>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/shipping_to_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shipping_to_title"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textColor="@color/black" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_phone"
                            style="@style/Widget.Bingee.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/shipping_to_title"
                            android:enabled="true"
                            android:hint="@string/bin_hint_phonenumber"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:enabled="false"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_fullname"
                            style="@style/Widget.Bingee.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text_input_phone"
                            android:hint="@string/bin_hint_fullname"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_fullname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLines="1"
                                android:enabled="false"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_address"
                            style="@style/Widget.Bingee.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text_input_fullname"
                            android:hint="@string/bin_hint_address"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLines="1"
                                android:enabled="false"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_input_address"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pay_method_title"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                                android:textColor="@color/black" />

                            <RadioGroup
                                android:id="@+id/groupMethodOfDelivery"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:clickable="false"
                                >

                                <RadioButton
                                    android:id="@+id/rbtnCOD"
                                    android:layout_width="180dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/bin_hint_cod"
                                    android:clickable="false"/>

                                <RadioButton
                                    android:id="@+id/rbtnCreditCard"
                                    android:layout_width="180dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/bin_hint_credit_card"
                                    android:clickable="false"/>
                            </RadioGroup>

                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>