<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CheckoutFragment"
    android:background="@color/colorAccent">

    <LinearLayout
        android:id="@+id/view_backdrop"
        style="@style/Widget.Bingee.Backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:paddingBottom="100dp">

        <include layout="@layout/layout_backdrop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_app_bar" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/checkout_grid"
            style="@style/ShapeAppearanceOverlay.Bingee.MaterialCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:gravity="center"
                                android:text="@string/bin_checkout_title"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

                            <androidx.coordinatorlayout.widget.CoordinatorLayout
                                android:id="@+id/snack_bar_cart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp" />
                        </RelativeLayout>


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/your_order_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/your_order_title"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textColor="@color/black" />

                        <androidx.core.widget.NestedScrollView
                            android:id="@+id/nestedscroll_view_cartlist"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:paddingStart="@dimen/bin_category_grid_spacing"
                            android:paddingEnd="@dimen/bin_category_grid_spacing"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_view_cart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </androidx.core.widget.NestedScrollView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card_view_checkout"
                            style="@style/CardView.Light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:elevation="4dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <RelativeLayout
                                    android:id="@+id/layout_total_price"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <com.google.android.material.textview.MaterialTextView
                                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/bin_cart_total"
                                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

                                    <com.google.android.material.textview.MaterialTextView
                                        android:id="@+id/cart_total_price"
                                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:inputType="numberDecimal"
                                        android:text="@string/bin_cart_totalprice"
                                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />
                                </RelativeLayout>
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="16dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/shipping_to_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/shipping_to_title"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/text_input_phone"
                                style="@style/Widget.Bingee.TextInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/shipping_to_title"
                                android:enabled="true"
                                android:hint="@string/bin_hint_phonenumber"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edit_text_phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="phone"
                                    android:maxLines="1" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/text_input_fullname"
                                style="@style/Widget.Bingee.TextInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/text_input_phone"
                                android:hint="@string/bin_hint_fullname"
                                app:endIconMode="clear_text"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edit_text_fullname"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text"
                                    android:maxLines="1" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/text_input_address"
                                style="@style/Widget.Bingee.TextInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/text_input_fullname"
                                android:hint="@string/bin_hint_address"
                                app:endIconMode="clear_text"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edit_text_address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text"
                                    android:maxLines="1" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_input_address"
                                android:orientation="vertical">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/pay_method_title"
                                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                                    android:textColor="@color/black" />

                                <RadioGroup
                                    android:id="@+id/groupMethodOfDelivery"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <RadioButton
                                        android:id="@+id/rbtnCOD"
                                        android:layout_width="180dp"
                                        android:layout_height="wrap_content"
                                        android:checked="true"
                                        android:text="@string/bin_hint_cod" />

                                    <RadioButton
                                        android:id="@+id/rbtnCreditCard"
                                        android:layout_width="180dp"
                                        android:layout_height="wrap_content"
                                        android:text="@string/bin_hint_credit_card" />
                                </RadioGroup>

                            </LinearLayout>

                        </RelativeLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_place_order"
                            style="@style/Widget.Bingee.Button"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:text="@string/bin_btn_place_order"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>