<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">



        <!--        <ImageView-->
        <!--            android:id="@+id/product_image"-->
        <!--            android:layout_width="80dp"-->
        <!--            android:layout_height="80dp"-->
        <!--            android:background="?attr/colorPrimaryDark"-->
        <!--            android:scaleType="centerCrop" />-->

        <!--        <LinearLayout-->
        <!--            android:layout_width="180dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical"-->
        <!--            android:layout_columnSpan="1">-->

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bin_product_title"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginRight="36dp"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bin_item_price"
            android:textAppearance="?attr/textAppearanceBody2"
            android:layout_marginRight="36dp"/>

        <!--        </LinearLayout>-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_quantity"
            style="@style/Widget.Bingee.TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_marginRight="36dp"
         >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:padding="0dp"
                android:textAppearance="?attr/textAppearanceBody2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_item"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delete_item"
            />


  </LinearLayout>
</com.google.android.material.card.MaterialCardView>